--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "private": true,
   "license": "MIT",
+  "name":"apollo-link",
+  "version":"1.2.2",
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "diff": "check-if-folder-contents-changed-in-git-commit-range",
